--- a/api/external/api-import-res.yaml
+++ b/api/external/api-import-res.yaml
@@ -7,6 +7,14 @@ tags:
 paths:
   /v1/import-resources:
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
