--- a/api/external/api-host-res.yaml
+++ b/api/external/api-host-res.yaml
@@ -8,6 +8,14 @@ tags:
 paths:
   /v1/resource/host/:
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -98,6 +106,14 @@ paths:
       summary: 注册主机
   '/v1/resource/host/{cluster_id}/nodes':
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -133,6 +149,14 @@ paths:
       summary: 根据集群ID查询集群的主机信息列表
   '/v1/resource/host/{host_id}':
     delete:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -161,6 +185,14 @@ paths:
       operationId: delete_host_v1_resource_host__host_id__delete
       summary: 根据主机ID删除主机
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -192,6 +224,14 @@ paths:
       summary: 根据主机ID查询主机信息
   '/v1/resource/host/{host_id}/action/modify':
     put:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -235,6 +275,14 @@ paths:
       summary: 修改主机名名称
   '/v1/resource/host/{host_id}/action/sync-snmp-conf':
     post:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -252,7 +300,6 @@ paths:
       responses:
         '200':
           description: The response is the newly created fileset
-          schema: {}
         '404':
           description: Not found
         '422':
@@ -268,6 +315,14 @@ paths:
       summary: 同步Trap信息到Oracle主机
   '/v1/resource/host/{host_id}/asm-auth':
     post:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       consumes:
         - application/json
       produces:
@@ -293,7 +348,6 @@ paths:
       responses:
         '200':
           description: The response is the newly created fileset
-          schema: {}
         '404':
           description: Not found
         '422':
@@ -308,6 +362,14 @@ paths:
       summary: 修改ASM授权
   '/v1/resource/host/{host_id}/asm-authinfo':
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
@@ -337,6 +399,14 @@ paths:
       summary: 根据主机ID查询主机ASM授权信息
   '/v1/resource/host/{host_id}/asm-info':
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       produces:
         - application/json
       parameters:
