--- a/api/external/api-job.yaml
+++ b/api/external/api-job.yaml
@@ -12,6 +12,14 @@ tags:
 paths:
   /v1/jobs:
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - Job API
       summary: 查询任务
@@ -79,9 +87,7 @@ paths:
           required: false
           type: integer
           maximum: 200.0
-          exclusiveMaximum: false
           minimum: 0.0
-          exclusiveMinimum: false
           format: int32
           x-example: 10
         - name: sourceId
@@ -119,7 +125,6 @@ paths:
           required: false
           type: integer
           minimum: 0.0
-          exclusiveMinimum: false
           format: int32
           x-example: 0
         - name: statusList
@@ -189,9 +194,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   /v1/jobs/action/export:
     post:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - Job API
       summary: 导出任务
@@ -250,7 +262,6 @@ paths:
           required: false
           type: string
           default: en
-          allowEmptyValue: false
         - name: orderBy
           in: query
           description: 排序字段
@@ -357,9 +368,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   /v1/jobs/summary:
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - Job API
       summary: 任务汇总
@@ -378,14 +396,12 @@ paths:
           required: false
           type: integer
           format: int64
-          allowEmptyValue: false
         - name: startTime
           in: query
           description: 开始时间
           required: false
           type: integer
           format: int64
-          allowEmptyValue: false
       responses:
         '200':
           description: OK
@@ -401,9 +417,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/jobs/{jobId}':
     get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - Job API
       summary: 查询单个任务
@@ -438,9 +461,16 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/jobs/{jobId}/action/stop':
     put:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - Job API
       summary: 停止任务
@@ -476,9 +506,12 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   '/v1/jobs/{jobId}/logs':
     get:
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'Y'
+      x-dp-admin-role: 'Y'
+      x-sysadmin-role: 'Y'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -677,6 +710,9 @@ definitions:
       associativeId:
         type: string
         description: 实例id
+      additionalStatus:
+        type: string
+        description: '任务附加状态[取值范围] Database Available:数据库可用；Virtual Machine Available：虚拟机可用'
       copyId:
         type: string
         description: 副本id
