Match-id-b9e38d83d135baa5b5ccc67d6b45f1e63b645823

--- a/api/external/api-multi-cluster.yaml
+++ b/api/external/api-multi-cluster.yaml
@@ -1,9 +1,7 @@
 swagger: '2.0'
 info:
   version: v1
-  title: multi-cluster-api
-  contact: {}
-  license: {}
+  title: 多集群管理API
   description: 多集群信息统计接口
 host: localhost
 basePath: /
