--- a/api/internal/api-copy-detection-internal.yaml
+++ b/api/internal/api-copy-detection-internal.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: v1
-  title: ApplicationTitle
+  title: 副本管理接口
   description: GroupDesc
 schemes:
   - https
@@ -48,6 +48,95 @@ paths:
                 This field is the request ID number for task tracking. Format is
                 request_uuid-timestamp-hostname.
               type: string
+    get:
+      x-impact-subsystem: 不影响
+      tags:
+        - copies
+      x-access-port: 30092
+      x-auth-required: 'N'
+      x-public-api: 'N'
+      operationId: ShowDetectionReport
+      summary: 获得副本防勒索检测报告
+      description: 根据副本id获得防勒索检测报告
+      produces:
+        - application/json
+      parameters:
+        - name: copy_id
+          in: path
+          required: true
+          type: string
+          description: 副本ID
+          minLength: 1
+          maxLength: 64
+          x-access-port: 25081
+          x-auth-required: 'Y'
+          x-public-api: 'Y'
+      responses:
+        '200':
+          description: Demo Information
+          schema:
+            $ref: '#/definitions/CopyAntiRansomwareReport'
+          headers:
+            X-request-id:
+              type: string
+              description: >-
+                This field is the request ID number for task tracking. Format is
+                request_uuid-timestamp-hostname.
+        '400':
+          description: Error response
+          schema:
+            $ref: '#/definitions/ErrorRsp'
+          headers:
+            X-request-id:
+              type: string
+              description: >-
+                This field is the request ID number for task tracking. Format is
+                request_uuid-timestamp-hostname.
+  /v1/internal/copies/status/undetected:
+    get:
+      x-access-port: 30092
+      x-auth-required: 'N'
+      x-public-api: 'N'
+      tags:
+        - copies
+      summary: 获得副本列表中未检测防勒索的资源 获得副本列表中未检测防勒索的资源
+      description: 获得副本列表中未检测防勒索的资源
+      operationId: ListUndetectResources
+      parameters:
+        - name: generated_by_list
+          in: query
+          required: false
+          description: 副本生成类型集合
+          type: array
+          items:
+            type: string
+        - name: copy_start_time
+          in: query
+          required: false
+          description: 该时间之后完成的副本
+          type: string
+        - name: resource_id
+          in: query
+          required: true
+          description: 资源id
+          type: string
+        - name: page_no
+          in: query
+          required: true
+          description: 起始页
+          type: integer
+          format: int32
+        - name: page_size
+          in: query
+          required: true
+          description: 每页条数
+          type: integer
+          format: int32
+      responses:
+        '200':
+          description: ''
+          schema:
+            $ref: '#/definitions/BasePageCopySchema'
 definitions:
   DemoInfo:
     description: This is a demo
@@ -91,13 +180,6 @@ definitions:
         maxLength: 512
   CopyAntiRansomwareReport:
     description: 副本检测报告
-    required:
-      - copy_id
-      - timestamp
-      - model
-      - status
-      - detection_time
-      - last_tested_time
     properties:
       copy_id:
         type: string
@@ -109,20 +191,22 @@ definitions:
         type: string
         description: 防勒索检测模型
       status:
-        type: string
-        description: 检测状态
+        type: integer
+        format: int32
+        description: 检测状态。-1未检测、0准备中、1进行中、2未感染、3已感染、4异常
       detection_duration:
-        type: string
-        description: 检测持续时间
+        type: integer
+        format: int32
+        description: 检测持续时间（s）
       detection_time:
         type: string
         description: 副本检测时间
       report:
         type: string
         description: 防勒索检测报告
-      last_tested_time:
-        type: string
-        description: 防勒索最新检测时间
+    required:
+      - copy_id
+      - status
   CopyAntiRansomwar:
     description: 副本防勒索详细信息
     required:
@@ -216,3 +300,254 @@ definitions:
     required:
       - copy_id
       - status
+  CopyAntiRansomwareReq:
+    description: 防勒索报告对象
+    properties:
+      status:
+        type: integer
+        format: int32
+        description: '0：准备中；1:进行中；2：未感染；3：已感染；4：异常；'
+        minimum: 0
+        maximum: 4
+        x-access-port: 30092
+        x-auth-required: 'Y'
+        x-public-api: 'N'
+      model:
+        type: string
+        description: 防勒索检测模型
+      detection_start_time:
+        type: string
+        description: 副本检测开始时间
+      detection_end_time:
+        type: string
+        description: 防勒索结束时间
+      report:
+        type: string
+        description: 检测报告
+    required:
+      - status
+  CopySchema:
+    properties:
+      backup_type:
+        description: 备份类型
+        title: Backup Type
+        type: integer
+      chain_id:
+        description: 副本链ID
+        title: Chain Id
+        type: string
+      deletable:
+        description: 副本是否可删除
+        title: Deletable
+        type: boolean
+      display_timestamp:
+        description: 副本时间戳
+        format: date-time
+        title: Display Timestamp
+        type: string
+      duration_unit:
+        description: |-
+          副本保留时间单位（天、周、月、年）
+          d:天
+          w:周
+          MO:月
+          y:年
+        title: Duration Unit
+        type: string
+        enum:
+          - d
+          - w
+          - MO
+          - 'y'
+        x-access-port: 30092
+        x-auth-required: 'N'
+        x-public-api: 'N'
+      expiration_time:
+        description: 副本过期时间
+        format: date-time
+        title: Expiration Time
+        type: string
+      features:
+        description: 副本支持的特性
+        title: Features
+        type: integer
+      generated_by:
+        description: 副本生成类型
+        title: Generated By
+        type: string
+      generated_time:
+        description: 副本时间戳
+        format: date-time
+        title: Generated Time
+        type: string
+      generation:
+        description: 副本代数
+        title: Generation
+        type: integer
+      gn:
+        description: 副本序列号
+        title: Gn
+        type: integer
+      indexed:
+        description: 副本建立索引状态
+        title: Indexed
+        type: string
+      is_archived:
+        description: 副本是否归档
+        title: Is Archived
+        type: boolean
+      is_replicated:
+        description: 副本是否复制
+        title: Is Replicated
+        type: boolean
+      location:
+        description: 副本位置
+        title: Location
+        type: string
+      next_copy_gn:
+        description: 下一个副本的gn
+        title: Next Copy Gn
+        type: integer
+      next_copy_id:
+        description: 下一个副本的ID
+        title: Next Copy Id
+        type: string
+      parent_copy_uuid:
+        description: 父副本ID
+        title: Parent Copy Uuid
+        type: string
+      prev_copy_gn:
+        description: 上一个副本的gn
+        title: Prev Copy Gn
+        type: integer
+      prev_copy_id:
+        description: 上一个副本的ID
+        title: Prev Copy Id
+        type: string
+      properties:
+        description: 副本扩展属性
+        title: Properties
+        type: string
+      resource_environment_ip:
+        description: 资源环境IP
+        title: Resource Environment Ip
+        type: string
+      resource_environment_name:
+        description: 资源环境名称
+        title: Resource Environment Name
+        type: string
+      resource_id:
+        description: 资源ID
+        title: Resource Id
+        type: string
+      resource_location:
+        description: 资源位置
+        title: Resource Location
+        type: string
+      resource_name:
+        description: 资源名称
+        title: Resource Name
+        type: string
+      resource_properties:
+        description: 资源属性（JSON格式）
+        title: Resource Properties
+        type: string
+      resource_status:
+        description: 资源状态
+        title: Resource Status
+        type: string
+      resource_sub_type:
+        description: 资源子类型
+        title: Resource Sub Type
+        type: string
+      resource_type:
+        description: 资源类型
+        title: Resource Type
+        type: string
+      retention_duration:
+        description: 副本保留时间
+        title: Retention Duration
+        type: integer
+      retention_type:
+        description: 副本保留类型：1（永久保留）2（指定时间保留）
+        title: Retention Type
+        type: integer
+      sla_name:
+        description: SLA名称
+        title: Sla Name
+        type: string
+      sla_properties:
+        description: SLA属性（JSON格式）
+        title: Sla Properties
+        type: string
+      status:
+        description: 副本有效性
+        title: Status
+        type: string
+      timestamp:
+        description: 副本时间戳
+        title: Timestamp
+        type: string
+      user_id:
+        description: 副本资源的用户id
+        title: User Id
+        type: string
+      uuid:
+        description: 副本ID
+        title: Uuid
+        type: string
+    title: CopySchema
+    required:
+      - deletable
+      - display_timestamp
+      - generated_by
+      - generation
+      - gn
+      - indexed
+      - resource_id
+      - resource_location
+      - resource_name
+      - resource_properties
+      - resource_status
+      - resource_type
+      - retention_type
+      - status
+      - timestamp
+      - uuid
+  UpdateCopyAntiRansomwareStatus:
+    properties:
+      status:
+        type: integer
+        format: int32
+        description: '0：准备中；1:进行中；2：未感染；3：已感染；4：异常；'
+    required:
+      - status
+  BasePageCopySchema:
+    properties:
+      total:
+        type: integer
+        format: int32
+        description: 总的数据条数
+      pages:
+        type: integer
+        format: int32
+        description: 总页数
+      page_size:
+        type: integer
+        format: int32
+        description: 每页数据量
+      page_no:
+        type: integer
+        format: int32
+        description: 页面编号
+      items:
+        type: array
+        description: 副本对象
+        items:
+          $ref: '#/definitions/CopySchema'
+    required:
+      - total
+      - pages
+      - page_size
+      - page_no
+      - items
