Match-id-2b49974d2ea7dfe581d5527dc5023cd18944f24a

--- a/api/external/api-dee_anti_ransomware.yaml
+++ b/api/external/api-dee_anti_ransomware.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: v1
-  title: DEE Anti Ransomware API Document
+  title: 勒索软件防护接口
   contact: {}
   license: {}
 host: localhost
