--- a/api/external/export-files.yaml
+++ b/api/external/export-files.yaml
@@ -13,6 +13,7 @@ tags:
 paths:
   /v1/export-files:
     get:
+      x-dm-role: 'N'
       x-rd-admin-role: 'N'
       x-sysadmin-role: 'Y'
       x-auditor-role: 'Y'
@@ -23,6 +24,7 @@ paths:
       x-public-api: 'Y'
       tags:
         - api-export-files-api
+      summary: 批量查询导出记录
       description: 批量查询导出记录
       operationId: GetExportFiles
       parameters:
@@ -99,14 +101,18 @@ paths:
           schema:
             $ref: '#/definitions/BasePage_ExportRecordQueryResponse'
     post:
+      x-dm-role: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
       x-sysadmin-role: 'Y'
-      x-dp-admin-role: ''
+      x-dp-admin-role: 'Y'
       x-impact-subsystem: 影响
       x-access-port: 25081
       x-auth-required: 'Y'
       x-public-api: 'Y'
       tags:
         - api-export-files-api
+      summary: 创建导出文件记录
       description: 创建导出文件记录
       operationId: CreateExportFile
       parameters:
@@ -126,6 +132,7 @@ paths:
           description: 无返回值
   '/v1/export-files/{id}':
     delete:
+      x-dm-role: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-sysadmin-role: 'Y'
@@ -136,6 +143,7 @@ paths:
       x-public-api: 'Y'
       tags:
         - api-export-files-api
+      summary: 删除导出记录
       description: 删除导出记录
       operationId: DeleteExportFiles
       parameters:
@@ -163,6 +171,7 @@ paths:
           description: 无返回值
   '/v1/export-files/{id}/action/download':
     get:
+      x-dm-role: 'N'
       x-rd-admin-role: 'N'
       x-sysadmin-role: 'Y'
       x-auditor-role: 'Y'
@@ -173,6 +182,7 @@ paths:
       x-public-api: 'Y'
       tags:
         - api-export-files-api
+      summary: 下载导出文件
       description: 下载导出文件
       operationId: DownloadExportFile
       parameters:
